--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/AlphaCars.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.dom4j-1.6.1.jar=bibliotecas\\dom4j-1.6.1.jar
 file.reference.mysql-connector-java-5.1.46.jar=bibliotecas\\mysql-connector-java-5.1.46.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.46.jar}
+    ${file.reference.mysql-connector-java-5.1.46.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
